[package]
name = "libation-feedserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
chrono = "0.4"
env_logger = "0.11"
futures-util = { version = "0.3.17", default-features = false, features = [
  "std",
] }
log = "0.4"
percent-encoding = "2.1"
rss = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
